--- a/src/views/Blog/index.css
+++ b/src/views/Blog/index.css
@@ -1,6 +1,10 @@
 .blog-container {
     display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: 50% 50%;
     grid-gap: 10px;
     padding: 0 3rem 3rem 3rem;
+}
+
+.title-wrapper {
+    margin-bottom: 3rem;
 }
